[gd_scene load_steps=8 format=3 uid="uid://dlif3vqhha1b0"]

[ext_resource type="Texture2D" uid="uid://dwas7akfb5smn" path="res://assets/sprites/yetisprite.png" id="1_jdskg"]
[ext_resource type="Script" uid="uid://b7irxrkdtnerl" path="res://Scripts/Boss.gd" id="1_rgqsi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jdskg"]
atlas = ExtResource("1_jdskg")
region = Rect2(1044, 0, 438, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_me6e5"]
atlas = ExtResource("1_jdskg")
region = Rect2(438, 0, 438, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgqsi"]
atlas = ExtResource("1_jdskg")
region = Rect2(0, 0, 438, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_smvyy"]
atlas = ExtResource("1_jdskg")
region = Rect2(438, 0, 438, 1024)

[sub_resource type="SpriteFrames" id="SpriteFrames_me6e5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdskg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me6e5")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgqsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smvyy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Boss" type="Node2D"]
script = ExtResource("1_rgqsi")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(9, 8)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_me6e5")
autoplay = "default"

[node name="EntryTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="EntryTimer" to="." method="_on_entry_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
